# ebpfsnitch

./: CHANGELOG.md  CMakeLists.txt  Dockerfile-ubuntu-2010  LICENSE  Makefile  PKGBUILD  README.md  bpf_wrapper.cpp  bpf_wrapper.hpp  connection_manager.cpp  connection_manager.hpp  control  control_api.cpp  control_api.hpp  deb.sh  dns_cache.cpp  dns_cache.hpp  dns_parser.cpp  dns_parser.hpp  ebpf_event.hpp  ebpfsnitch_daemon.cpp  ebpfsnitch_daemon.hpp  ebpfsnitchd.service  lru_map.hpp  main.cpp  misc.cpp  misc.hpp  nfq_event.h  nfq_wrapper.cpp  nfq_wrapper.hpp  probe_event.hpp  probes.c  process_manager.cpp  process_manager.hpp  rule_engine.cpp  rule_engine.hpp  stopper.cpp  stopper.hpp  structs.h  ubuntu.txt
tests/: lru_map_test.cpp  stopper_test.cpp
ui/: MANIFEST.in  ebpfsnitch  index.html  main.js  main.py  package-lock.json  package.json  renderer.js  setup.py
ui/ebpfsnitch/: entry.py
